[package]
name = "spi-flash"
version = "0.1.0"
authors = ["Noah Huesser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
nb = "*"
embedded-hal = "*"

[dev-dependencies]
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "~0.3"
panic-semihosting = "~0.5"
nb = "~0.1"
nrf52840-hal = { path = "../nrf52-hal/nrf52840-hal/" }
nrf52840-dk-bsp = { path = "../nrf52-hal/boards/nRF52840-DK" }